--- a/public/Templates/CvCloneTemplates/1612449261.html
+++ b/public/Templates/CvCloneTemplates/1612449261.html
@@ -19,27 +19,27 @@
     <div class="container" id="TheMain">
         <div class="row">
             <div class="col-xs-4" style="background-color: antiquewhite;" id="LeftSection">
-                <h3 style="text-align: left;padding:15px;font-weight: 700;font-family: 'Open Sans', sans-serif;">{{.BasicsInformations.FullName}}</h3>
-                {{if .HasImage}}
+                <h3 style="text-align: left;padding:15px;font-weight: 700;font-family: 'Open Sans', sans-serif;">Ahmed altommy</h3>
+                
                 <div class="mt-3" id="ImageSection">
-                    <img src="{{.ServerURI}}public/Images/BasicsInformations/{{.BasicsInformations.Photo}}" class="img-responsive" />
+                    <img src="http://192.168.1.152:8082/public/Images/BasicsInformations/min-1263393128217.jpg" class="img-responsive" />
                 </div>
-                {{end}}
+                
                 <div id="BasicsInformations" style="margin-top: 30px;">
                     <h3 style="font-weight: bold;border-bottom: 1px solid whitesmoke;">Informations</h3>
                     
                     <h3 style="font-weight: 700;font-size: 18px;">Phone:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> {{.BasicsInformations.Phone}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 078896532</p>
                     <h3 style="font-weight: 700;font-size: 18px;">Email:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> {{.BasicsInformations.Email}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Plus</p>
                     <h3 style="font-weight: 700;font-size: 18px;">Country:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> {{.BasicsInformations.Country}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Jordan</p>
                     <h3 style="font-weight: 700;font-size: 18px;">City:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> {{.BasicsInformations.City}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Jjh</p>
                     <h3 style="font-weight: 700;font-size: 18px;">Address:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> {{.BasicsInformations.Address}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Nnb</p>
                     <h3 style="font-weight: 700;font-size: 18px;">Gender:</h3>
-                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{.BasicsInformations.Gender}}</p>
+                    <p style="font-weight: 700;"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Male</p>
                 </div>
             </div>
             <div class="col-xs-6" >
@@ -47,7 +47,7 @@
                     <h3 style="font-weight: 700;">Summary</h3>
                     <hr>
                     <p>
-                        {{.Summary.Title}}
+                        Couch
                     </p>
 
                 </div>
@@ -56,11 +56,11 @@
                     <hr>
                     <div class="container_fluid">
                         <div class="row">
-                            {{range .WorkExperience}}
+                            
                             <div class="col-xs-5">
-                                <strong>-</strong> {{.Title}}
+                                <strong>-</strong> Bbb
                             </div>
-                            {{end}}
+                            
                         </div>
                     </div>
                 </div>
@@ -68,27 +68,27 @@
                     <h3 style="font-weight: 700;">Experiences</h3>
                     <hr>
                     <div class="container_fluid">
-                        {{range .WorkExperience}}
-                        <p>{{.Title}} <strong>-</strong> {{.Company}} <strong>-</strong> Start in: {{.Start}} <strong>-</strong> End in: {{.End}}</p>
-                        {{end}}
+                        
+                        <p>Bbb <strong>-</strong> Hhh <strong>-</strong> Start in: Hg <strong>-</strong> End in: Hhg</p>
+                        
                     </div>
                 </div>
                 <div style="padding-top: 5px;">
                     <h3 style="font-weight: 700;">Educations</h3>
                     <hr>
                     <div class="container_fluid">
-                        {{range .Educations}}
-                        <p>{{.Title}} - {{.Colleague}} - <strong>Start in:</strong> {{.Start}} - <strong>End in: </strong>{{.End}}</p>
-                        {{end}}
+                        
+                        <p>Bjvj - Ggh - <strong>Start in:</strong> Jj - <strong>End in: </strong>Hh</p>
+                        
                     </div>
                 </div>
                 <div style="padding-top: 5px;">
                     <h3 style="font-weight: 700;">Certifications</h3>
                     <hr>
                     <div class="container_fluid">
-                        {{range .Certifications}}
-                        <p>{{.Title}}</p>
-                        {{end}}
+                        
+                        <p>Hhh</p>
+                        
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
         crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
+    
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 
